# rust_doc_walkthrough

./: .gitignore  README.md
projects/: Cargo.toml
projects/adder/src/: lib.rs
projects/adder/tests/: integration_test.rs
projects/closures/src/: main.rs
projects/collections_exercise/: README.md
projects/collections_exercise/src/: lib.rs  median_mode.rs  pig_latin.rs
projects/control_flow/src/: main.rs
projects/conv/: Cargo.toml
projects/conv/src/: main.rs
projects/enums/src/: main.rs
projects/error_handling/src/: main.rs
projects/fibonacci/src/: main.rs
projects/functions/src/: main.rs
projects/generics/src/: main.rs
projects/guessing_game/src/: main.rs
projects/guessing_game_v2/: Cargo.toml
projects/guessing_game_v2/src/: main.rs
projects/hashmaps/src/: main.rs
projects/hello_cargo/: run.sh
projects/iterators/src/: main.rs
projects/lifetimes/src/: main.rs
projects/match_control/src/: main.rs
projects/ownership_tutorial/: Cargo.toml
projects/ownership_tutorial/src/: main.rs
projects/rectangles/src/: main.rs
projects/restaurant/src/: front_of_house.rs  lib.rs  main.rs
projects/slice/src/: main.rs
projects/strings/src/: main.rs
projects/structs/src/: main.rs
projects/temperature/src/: main.rs
projects/traits/src/: aggregator.rs  main.rs  pair.rs
projects/variables/src/: main.rs
projects/vector/src/: main.rs
