[workspace]

members = [
    "control_flow",
    "fibonacci",
    "functions",
    "guessing_game",
    "hello_cargo",
    "ownership_tutorial",
    "slice",
    "temperature",
    "variables",
    "structs",
    "rectangles",
    "enums",
    "match_control",
    "backyard",
    "restaurant",
    "vector",
    "strings",
    "hashmaps",
    "collections_exercise",
    "error_handling",
]
